Release Notes

* 10/21/2015
  * fixed slow insertFiles due to givenFiles

* 10/20/2015
  * fixed getMaxAtom for pmerge to use getNum*PerMergeJob
  * added allowNoOutput

* 10/19/2015
  * changed AtlasTPP to set lifetime to transient datasets

* 10/16/2015
  * fixed resetUnused to take ramcount into account

* 10/14/2015
  * added dynamicNumEvents stuff
  * added maxNumEventRanges

* 10/12/2015
  * added dynamic nQueueLimit
  * added timeoutForPendingVoLabel

* 10/8/2015
  * ignoring TEST when converting token to RSE

* 10/7/2015
  * added a margin to the multiplier of disk count estimation for pmerge
  * fixed CF for nEventsPerRange

* 10/6/2015
  * changed JG to release the lock as soon as tasks are taken when nQueued<nQueueLimit
  * fixed lackOfJobs

* 10/2/2015
  * fixed JG to reset destinationDBlock when the site doesn't have endpoint for ddd:	
  * more fixed CF for seq_num+skipFilesUsedBy

* 10/1/2015
  * fixed CF for seq_num+skipFilesUsedBy
  * changed JG to lock just before final task update

* 9/30/2015
  * added ddd:
  * changed AtlasPJB to work with cpuTime=0

* 9/29/2015
  * fixed setScoutJobDataToTasks_JEDI to take young tasks into account
  * suppressed files in JediDataset.str 

* 9/28/2015
  * added retrial module

* 9/27/2015
  * fixed AtlasProdWatchDog for reassigning

* 9/25/2015
  * added protection to TC for empty commentStr

* 9/24/2015
  * changed APJB to take priority-based shares into account 

* 9/22/2015
  * removed amiFlag

* 9/21/2015
  * fixed failWhenGoalUnreached for goal=100.0
  * fixed rescuePicked to lock tasks

* 9/11/2015
  * added setScoutJobDataToTasks

* 9/9/2015
  * added WORLD

* 9/1/2015
  * added skipFilesUsedBy

* 8/27/2015
  * changed AtlasPJB to skip share check for test/validation

* 8/25/2015
  * setting activity for registerDatasetLocation
  * changed task.outDiskCount to include size of intermediate files
  * changed task.outDiskCount to scale with events when outDiskUnit has PerEvent